# BootTrans

./: .gitignore  README.md
MultiPLE/: .gitignore  README_YHWU.md  autochatmodel.py  automodel_vllm.py  pass_k.py
MultiPLE/chat-templates/: translation.yaml  translation_grpo.yaml  translation_tot_backup.yaml  translation_tot_qwen3.yaml
MultiPLE/dataset_builder/: all_prepare_prompts.py  generic_translator.py  humaneval_to_cpp.py  humaneval_to_d.py  humaneval_to_go.py  humaneval_to_java.py  humaneval_to_jl.py  humaneval_to_js.py  humaneval_to_lua.py  humaneval_to_py.py  humaneval_to_r.py  humaneval_to_rkt.py  humaneval_to_scala.py  humaneval_to_sh.py  humaneval_to_swift.py  kodcode_signature.py  log  prepare_prompts_json.py  translate_kodcode.py
MultiPLE/evaluation/: Makefile  pyproject.toml
MultiPLE/evaluation/src/: command_line.py  containerized_eval.py  eval_cpp.py  eval_go.py  eval_java.py  eval_python.py  eval_scala.py  eval_sh.py  main.py  simple_eval.py
MultiPLE/multipl_e/: completions.py
data/: validation_humanevalx.jsonl
evaluation/: autochatmodel.py  utils.py
examples/: boottrans.sh  qwen_lang.yaml
examples/format_prompt/: translation.jinja
examples/reward_function/: code_mp.py
tests/: test_core_algos_grpo_lang.py  test_data_loader_tree.py  test_train_iterator.py  test_translation_trainer_exploration.py
verl/trainer/: config.py  core_algos.py  data_loader_tree.py  main.py  main_trans.py  metrics.py  ray_trainer.py  ray_translation_trainer.py
verl/utils/: dataset.py
verl/utils/logger/: logger.py
verl/workers/actor/: dp_actor.py
(+1 files in other folders)
